<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="#FFFFFF"
android:orientation="vertical"
    tools:context="ca.edumedia.rileygriffith.assignmenthilo.MainActivity">


<TextView
    android:id="@+id/textView3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:text="@string/RobotString"
    android:textAlignment="center"
    android:textColor="@color/colorTextDark"
    android:textSize="22sp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:text="@string/remaining"
        android:textColor="@color/colorTextDark" />

    <TextView
        android:id="@+id/remainingGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3.66"
        android:text="10"
        android:textColor="@color/colorTextDark" />
</LinearLayout>

<ImageView
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="132dp"
    android:src="@drawable/robot" />

<TextView
    android:id="@+id/theText"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_gravity="center_vertical"
    android:layout_weight="1"
    android:gravity="center_vertical|center_horizontal"
    android:text="@string/theText"
    android:textColor="@color/colorTextDark"
    android:textSize="20sp" />

<Space
    android:layout_width="match_parent"
    android:layout_height="25dp" />

<EditText
    android:id="@+id/userGuess"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:ems="10"
    android:hint="@string/userGuess"
    android:inputType="number" />

<Space
    android:layout_width="match_parent"
    android:layout_height="35dp" />

<!--<LinearLayout-->
<!--android:layout_width="384dp"-->
<!--android:layout_height="match_parent"-->
<!--android:gravity="center_horizontal"-->
<!--android:orientation="horizontal">-->

<Button
    android:id="@+id/Guess"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    android:onClick="onGuess"
    android:text="@string/Guess" />

<Space
    android:layout_width="match_parent"
    android:layout_height="15dp" />

<Button
    android:id="@+id/Reset"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    android:longClickable="true"
    android:text="@string/Reset"
    android:textColor="@color/colorTextDark" />

<!--</LinearLayout>-->

</LinearLayout>